--- a/app/src/main/res/layout/play_fragment.xml
+++ b/app/src/main/res/layout/play_fragment.xml
@@ -84,19 +84,19 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imgPlayStart"
-            app:shapeAppearanceOverlay="@style/circle"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:onClick="@{onClick}"
-            android:elevation="10dp"
             android:background="@color/white"
+            android:elevation="10dp"
+            android:onClick="@{onClick}"
             android:src="@drawable/selector_play_pic"
             app:imgPlay="@{pvm.playStatus}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/seekBar"
             app:layout_constraintStart_toStartOf="@+id/seekBar"
             app:layout_constraintTop_toBottomOf="@+id/seekBar"
-            app:layout_constraintVertical_bias="0.53" />
+            app:layout_constraintVertical_bias="0.53"
+            app:shapeAppearanceOverlay="@style/circle" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imgPrevious"
@@ -169,7 +169,6 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/tvName"
             app:layout_constraintTop_toBottomOf="@+id/tvName"
-            tools:text="***********************"/>
-
+            tools:text="***********************" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
