--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -6,10 +6,10 @@
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home"/>
 
-    <item
-        android:id="@+id/menu_video"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_video"/>
+<!--    <item-->
+<!--        android:id="@+id/menu_video"-->
+<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
+<!--        android:title="@string/title_video"/>-->
     <item
         android:id="@+id/menu_info"
         android:icon="@drawable/ic_dashboard_black_24dp"
