--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,16 +4,22 @@
         <item name="windowSplashScreenBackground">#FFFFFF</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/logo</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.Echo</item>
+        <!--   背景色     -->
+        <item name="android:colorBackground">@color/primary</item>
     </style>
     <!-- To see how these attributes are used, please visit https://material.io/develop/android/theming/color/ -->
     <style name="Base.Theme.Echo" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="colorPrimary">#F2F3F7</item>
-        <item name="colorSecondary">#39A7BB</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">#6200EE</item>
+        <item name="colorPrimaryVariant">#3700B3</item>
+        <item name="colorOnPrimary">#FFFFFF</item>
+        <item name="colorSecondary">#03DAC6</item>
+        <item name="colorSecondaryVariant">#018786</item>
+        <item name="colorOnSecondary">#000000</item>
+
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorOnSurface">@color/black</item>
         <item name="colorAccent">@color/Secondary</item>
-        <item name="colorSurface">#FCFCFC</item>
+        <item name="colorSurface">#FFFFFF</item>
         <!--   背景色     -->
         <item name="android:colorBackground">@color/white</item>
     </style>
@@ -58,6 +64,10 @@
     <style name="circle">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+    </style>
+    <style name="Widget.SplashTheme.MyView" parent="">
+        <item name="android:background">@color/gray_400</item>
+        <item name="exampleColor">@color/light_blue_400</item>
     </style>
 
 </resources>
