--- a/app/src/main/res/drawable/radius_16_theme.xml
+++ b/app/src/main/res/drawable/radius_16_theme.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="16dp"/>
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/white"/>
     <padding
         android:bottom="4dp"
         android:left="4dp"
