--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -82,7 +82,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="#00000000"
-                android:src="@mipmap/setting"
+                android:src="@android:drawable/ic_menu_sort_by_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
