--- a/app/src/main/res/layout/list_item_songlist.xml
+++ b/app/src/main/res/layout/list_item_songlist.xml
@@ -38,6 +38,7 @@
             android:layout_marginEnd="32dp"
             android:text='@{bean.name}'
             android:textSize="20sp"
+            android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/albumView"
@@ -50,6 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text='@{"共"+bean.number+"首"}'
+            android:textColor="?android:attr/textColorPrimary"
             app:layout_constraintEnd_toEndOf="@+id/textView7"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView7"
