--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,11 @@
 <resources>
-
-<!--    <style name="SplashTheme" parent="Theme.SplashScreen">-->
-<!--        <item name="windowSplashScreenBackground">#FFFFFF</item>-->
-<!--        <item name="windowSplashScreenAnimatedIcon">@mipmap/logo</item>-->
-<!--        <item name="postSplashScreenTheme">@style/Base.Theme.Echo</item>-->
-<!--        &lt;!&ndash;   背景色     &ndash;&gt;-->
-<!--        <item name="android:colorBackground">@color/primary</item>-->
-<!--    </style>-->
-    <!-- To see how these attributes are used, please visit https://material.io/develop/android/theming/color/ -->
-    <style name="Base.Theme.Echo" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Base.Theme.Echo" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">#6200EE</item>
         <item name="colorPrimaryVariant">#3700B3</item>
         <item name="colorOnPrimary">#FFFFFF</item>
         <item name="colorSecondary">#03DAC6</item>
         <item name="colorSecondaryVariant">#018786</item>
-        <item name="colorOnSecondary">#000000</item>
+        <item name="colorOnSecondary">?attr/colorControlNormal</item>
 
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorOnSurface">@color/black</item>
@@ -29,7 +20,7 @@
     </style>
 
     <style name="text_title">
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:maxLines">1</item>
@@ -50,13 +41,13 @@
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
     <style name="text_oneLine_16">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">#272727</item>
+        <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
     <style name="navigation" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">#2B2B2B</item>
@@ -64,10 +55,6 @@
     <style name="circle">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
-    </style>
-    <style name="Widget.SplashTheme.MyView" parent="">
-        <item name="android:background">@color/gray_400</item>
-        <item name="exampleColor">@color/light_blue_400</item>
     </style>
 
 </resources>
