新增自动请求权限 自定义背景图片

--- a/app/src/main/res/layout/audio_list_dialog_item.xml
+++ b/app/src/main/res/layout/audio_list_dialog_item.xml
@@ -13,6 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="10dp"
         android:elevation="1dp"
         android:background="@drawable/radius_10_hollow"
         android:foreground="?android:attr/selectableItemBackgroundBorderless">
@@ -22,11 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:maxEms="6"
-            android:ellipsize="end"
-            android:maxLines="1"
             android:text="@{pvm.songName}"
-            android:textSize="15sp"
+            style="@style/text_oneLine_18"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,11 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:ellipsize="end"
-            android:maxEms="5"
-            android:maxLines="1"
             android:text="@{pvm.author}"
-            android:textSize="12sp"
+            style="@style/text_oneLine_16"
             app:layout_constraintBottom_toBottomOf="@+id/item_tv_music"
             app:layout_constraintStart_toEndOf="@+id/item_tv_music"
             app:layout_constraintTop_toTopOf="@+id/item_tv_music"
