--- a/app/src/main/res/layout/play_fragment.xml
+++ b/app/src/main/res/layout/play_fragment.xml
@@ -21,6 +21,7 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imgAlbumPic"
             urlAlbum2="@{pvm.albumPic}"
+            android:onClick="@{onClick}"
             android:elevation="10dp"
             android:layout_width="315dp"
             android:layout_height="315dp"
