--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,6 +8,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FFFFFF</color>
     <color name="white">#262626</color>
+    <color name="white60">#991B1B1B</color>
     <color name="primary">#363636</color>
     <color name="Secondary">#39A7BB</color>
     <color name="light_blue_400">#FF29B6F6</color>
