--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="white60">#CCFFFFFF</color>
     <color name="primary">#FFFFFF</color>
     <color name="Secondary">#39A7BB</color>
     <color name="light_blue_400">#FF29B6F6</color>
