--- a/app/src/main/res/navigation/nav_graden.xml
+++ b/app/src/main/res/navigation/nav_graden.xml
@@ -52,6 +52,9 @@
         <action
             android:id="@+id/action_playFragment_to_audioListDialogFragment"
             app:destination="@id/audioListDialogFragment" />
+        <action
+            android:id="@+id/action_playFragment_to_lyricFragment"
+            app:destination="@id/lyricFragment" />
     </fragment>
     <fragment
         android:id="@+id/localSongFragment"
@@ -150,4 +153,8 @@
         android:name="com.example.echo_kt.ui.main.songListFragment.AddToPlayListDialog"
         android:label="AddToPlayListDialog"
         tools:layout="@layout/add_to_playlist_dialog"/>
+    <fragment
+        android:id="@+id/lyricFragment"
+        android:name="com.example.echo_kt.ui.main.LyricFragment"
+        android:label="LyricFragment" />
 </navigation>
