--- a/app/src/main/res/layout/fragment_local_song.xml
+++ b/app/src/main/res/layout/fragment_local_song.xml
@@ -16,27 +16,30 @@
 
         <TextView
             android:id="@+id/play_all"
-            style="@style/text_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:gravity="center"
-            android:text="全部播放"
+            android:background="@drawable/radius_24"
+            android:elevation="2dp"
             android:foreground="?android:attr/selectableItemBackgroundBorderless"
-            app:layout_constraintBottom_toBottomOf="@+id/btn_scan"
-            app:layout_constraintEnd_toStartOf="@+id/btn_scan"
+            android:text="@string/text_playAll"
+            app:layout_constraintBottom_toBottomOf="@+id/scan"
+            app:layout_constraintEnd_toStartOf="@+id/scan"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/scan" />
 
-        <Button
-            android:id="@+id/btn_scan"
+        <TextView
+            android:id="@+id/scan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="32dp"
-            android:background="@drawable/radius_10_hollow"
-            android:backgroundTint="#ffffff"
-            android:text="扫描本地歌曲"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/radius_24"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:elevation="2dp"
+            android:text="@string/text_scanLocalSongs"
             app:layout_constraintBottom_toTopOf="@+id/rvLocalSong"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -50,9 +53,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_scan"
+            app:layout_constraintTop_toBottomOf="@+id/scan"
             tools:listitem="@layout/audio_list_dialog_item">
-
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
