--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -90,6 +90,7 @@
                 android:background="#00000000"
                 android:contentDescription="@string/play"
                 android:scaleType="fitXY"
+                android:elevation="5dp"
                 android:src="@drawable/selector_play_pic"
                 app:imgPlay="@{mainVM.playStatus}"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -101,12 +102,13 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginEnd="8dp"
-                android:background="@null"
                 android:scaleType="fitXY"
+                android:elevation="5dp"
+                android:background="#00000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/list"
+                app:srcCompat="@drawable/ic_play_list"
                 android:contentDescription="@string/currentList" />
 
             <TextView
