--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -86,6 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="5dp"
+            android:background="@color/white60"
             android:visibility="@{!vmSetting.countdownBean.countdownState ? View.GONE : View.VISIBLE }"
             app:layout_constraintEnd_toEndOf="@+id/switchTimeOff"
             app:layout_constraintStart_toStartOf="@+id/switchTimeOff"
@@ -174,7 +175,7 @@
             style="@style/text_oneLine_16"
             android:layout_marginTop="16dp"
             android:gravity="center_vertical"
-            android:text="从相册选取背景"
+            android:text="@string/select_background"
             android:background="@drawable/radius_10_hollow"
             android:elevation="2dp"
             app:layout_constraintEnd_toEndOf="@+id/switchFloatWindow"
